* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 9.5.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 9.4.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 9.3.0
- Add AlmaLinux 8 support

* Mon Jul 24 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 9.2.0
- Add RockyLinux 8 support

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 9.1.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed Jan 13 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 9.0.0-0
- Add EL8 support
  - add dconf settings to dconf hash to ensure users can not disable
    lock screen or show passwords in plain text
  - update package lists.  Common package list is now packages common to
    gnome V3.
- Remove support for EL6
  - removed support for gnome2
  - removed the gconf parameters and settings.
  - removed test logic
  - removed parameter gnome::gconf_hash
  - removed parameter gnome::enable_gnome

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.1.2-0
- update the upper bound of simplib for SIMP 6.5 release

* Thu Aug 15 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.1-0
- Fix compliance engine tests

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 8.1.0-0
- Add v2 compliance_markup data

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Update Hiera 4 to Hiera 5

* Fri May 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
- Removed all GDM and Dconf settings - BREAKING
  - Dconf has been moved to its own module
- Ensure that all settings are 100% GNOME specific