@@ -1,6 +1,6 @@
 {
   "name": "simp-gnome",
-  "version": "9.5.0",
+  "version": "9.5.1",
   "author": "SIMP Team",
   "summary": "Provides useful settings to set up the GNOME desktop environment",
   "license": "Apache-2.0",
