@@ -1,3 +1,6 @@
+* Mon Nov 25 2024 Steven Pritchard <steve@sicura-us> - 9.5.1
+- Fix use of legacy facts
+
 * Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 9.5.0
 - [puppetsync] Add EL9 support
 
